@@ -9,3 +9,6 @@ This package contains the pipeline tools developed in Anima.
 
 stalker_server_address = 'http://192.168.0.64:6543'
 local_cache_folder = '~/.cache/anima/'
+
+normal_users_group_names = ['Normal Users']
+power_users_group_names = ['Power Users', 'admins']
